--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ git = "https://github.com/Rahix/avr-hal"
 rev = "8ab27dc"
 features = ["arduino-uno"]
 
+[dependencies.avr-hal-generic]
+git = "https://github.com/Rahix/avr-hal"
+rev = "8ab27dc"
+
 [dependencies.avr-device]
 version = "0.5.3"
 
