first draft for dolly logic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 panic-halt = "0.2.0"
 ufmt = "0.2.0"
+libm = "0.2.8"
 
 [dependencies.arduino-hal]
 git = "https://github.com/Rahix/avr-hal"
