--- a/binding/arduino.yaml
+++ b/binding/arduino.yaml
@@ -6,8 +6,8 @@ avr_gcc_version: 7.3.0-atmel3.6.1-arduino7
 arduino_libraries:
   - Wire
 external_libraries:
-  # - LiquidCrystal_I2C
-  - AccelStepper
+  - LiquidCrystal_I2C
+  # - AccelStepper
 definitions:
   ARDUINO: '10807'
   F_CPU: 16000000L
@@ -17,13 +17,13 @@ flags:
   - '-mmcu=atmega328p'
 bindgen_lists:
   allowlist_function:
-    # - LiquidCrystal_I2C.*
-    - AccelStepper.*
-    - MultiStepper.*
+    - LiquidCrystal_I2C.*
+    # - AccelStepper.*
+    # - MultiStepper.*
   allowlist_type:
-    # - LiquidCrystal_I2C.*
-    - AccelStepper.*
-    - MultiStepper.*
+    - LiquidCrystal_I2C.*
+    # - AccelStepper.*
+    # - MultiStepper.*
   blocklist_function:
     - Print.*
     - String.*
