--- a/drivers/Cargo.toml
+++ b/drivers/Cargo.toml
@@ -8,6 +8,7 @@ panic-halt = "0.2.0"
 ufmt = "0.2.0"
 libm = "0.2.8"
 infrared = "0.14.2"
+void = { version = "1.0.2", default-features = false }
 
 [dependencies.arduino-hal]
 git = "https://github.com/Rahix/avr-hal"
@@ -20,3 +21,6 @@ rev = "8ab27dc"
 
 [dependencies.avr-device]
 version = "0.5.3"
+
+[dependencies.accel-stepper]
+path = "../accel-stepper"
